# haskell_bits

./: Cargo.toml  README.md
src/: applicative.rs  ext.rs  foldable.rs  functor.rs  impls.rs  lib.rs  mdo.rs  monad.rs  monoid.rs  semigroup.rs  traversable.rs  typeapp.rs  with_type_arg.rs
src/impls/: mod.rs  option.rs  result.rs  vec.rs
