[package]
name = "haskell_bits"
version = "0.3.0"
authors = ["Clinton <clintonmead@gmail.com>"]
edition = "2018"
repository = "https://github.com/clintonmead/haskell_bits"
description = "Rust implementations of various Haskell typeclasses and functions"
license = "MIT OR Apache-2.0"

[dependencies]
is_type = "0.2"
